docs: update benchmarks to focus on actor-specific performance
- Replaced concurrency model comparisons with actor optimization benchmarks measuring mailbox types, backpressure, and state management
- Added comprehensive performance matrix showing DISPATCHER_CBQ and DISPATCHER_MPSC improvements over BLOCKING mailboxes
- Created mailbox types documentation guide with configuration recommendations based on benchmark results
- Updated README to emphasize actor performance characteristics and optimization